tests/fixtures/compile-errors/too-many-type-parameters/input.nim
import strformat,options

import ../../../../dist/typecheck.macro
## and compile anyway
createValidator()
